tests/spec/compile-fail/050_oncefn_not_fn.zn
// category: compile-fail
// profile: freestanding
// purpose: closures that consume captures cannot be used where Fn is required

module tests.fail.onceFnNotFn;

struct Token {
    value: U32,
}

fn take(move token: Token) -> U32 {
    return token.value;
}

fn readOnly(f: Fn<U32>) -> U32 {
    return f();
}

fn bad() -> U32 {
    val token = Token { value: 1 };
    return readOnly(move () -> U32 {
        return take(move token); // expected-error: consuming closure implements OnceFn, not Fn
    });
}
